<resources>
    <string name="app_name">IOT_AWS</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>
    <string name="action_about">About</string>
    <string name="temperature_chart">Temperature chart</string>
    <string name="humidity_chart">Humidity chart</string>
    <string name="moisture_chart">Moisture chart</string>
    <string name="light_chart">Light chart</string>
    <string name="hour_long">MINUTE</string>
    <string name="day_long">HOUR</string>
    <string name="week_long">DATE</string>
    <string name="month_long">MONTH</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
