<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.t_anh.iot_aws.MainActivity">
    <item
        android:id="@+id/temperature_chart"
        android:orderInCategory="0"
        android:title="@string/temperature_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/humidity_chart"
        android:orderInCategory="1"
        android:title="@string/humidity_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/moisture_chart"
        android:orderInCategory="2"
        android:title="@string/moisture_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/light_chart"
        android:orderInCategory="3"
        android:title="@string/light_chart"
        app:showAsAction="never" />
</menu>
